[gd_scene load_steps=8 format=3 uid="uid://dn5oohuocl8fi"]

[ext_resource type="PackedScene" uid="uid://dp5t64ode0jis" path="res://objects/Player/first_person_controller.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://dk0wlovm5snbm" path="res://objects/Player/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://c7840fc4qlcua" path="res://ui/countdown.tscn" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://dvc6r7lmywqwn" path="res://sound/collect.wav" id="4_76bfe"]
[ext_resource type="AudioStream" uid="uid://qj0dj0ci23b3" path="res://sound/npc_bump.ogg" id="5_8e3mr"]
[ext_resource type="AudioStream" uid="uid://dommrijldkrg" path="res://sound/GimmeYoCheese.wav" id="6_sp50d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hi0mj"]
radius = 0.573603
height = 2.83

[node name="Player" type="Node3D"]
script = ExtResource("1_onrkg")

[node name="FirstPersonController" parent="." instance=ExtResource("1_4flbx")]

[node name="Area3D" type="Area3D" parent="FirstPersonController"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstPersonController/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.459623, 0)
shape = SubResource("CapsuleShape3D_hi0mj")

[node name="Countdown" parent="." instance=ExtResource("3_i3pqv")]
unique_name_in_owner = true

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_76bfe")

[node name="NpcBump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8e3mr")
volume_db = -20.0

[node name="NpcBump2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_sp50d")
volume_db = -20.0

[connection signal="body_entered" from="FirstPersonController/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="FirstPersonController/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="out_of_time" from="Countdown" to="." method="_on_countdown_out_of_time"]
